# ou-portfolio

./: README.md
Cryptography/NTRU/: description.md  ntru.sage  ntru_sign.sage  ntrumls.sage
Cryptography/RSA/: RSA.cpp  description.md
Cryptography/SubsetSum/: approximate_subset_sum.sage  description.md
Networking/Mininet/: grad-project-topo.py  run-Controller.sh  run-FlowTable.sh
NumericalMethods/GaussianSubstituion/: Matrix.java
NumericalMethods/ODEs/: ODEEstimatorsAnalysis.ipynb
NumericalMethods/ODEs/.ipynb_checkpoints/: Project3-checkpoint.ipynb
NumericalMethods/RootFinding/: RootFindingComparison.ipynb
NumericalMethods/RootFinding/.ipynb_checkpoints/: Project 2-checkpoint.ipynb
ParallelProgramming/MPI-LinearRecurences/: CMakeLists.txt  Homework3.sbatch  Report-Data.xlsx  Report.docx  cr.c  rd.c  rd_pseudo.c  run.sh
ParallelProgramming/MPI-LinearRecurences/output/: all_big.csv
ParallelProgramming/MPI-LinearRecurences/output/rd3/: all.csv  all.xlsx
ParallelProgramming/MPI-MatrixMultiplication/: CMakeLists.txt  Homework2-16.sbatch  Homework2-64.sbatch  Homework2.sbatch  main.c  run.sh
ParallelProgramming/OpenMP/: CMakeLists.txt  Homework5.sbatch  main.c  parallel.c  run.sh
ParallelProgramming/OpenMP/output/: err_12669008.txt  out_12669008.txt  parallel.csv  serial.csv
